--- a/level_1_challenge/challenge_1_LX_4.ipynb
+++ b/level_1_challenge/challenge_1_LX_4.ipynb
@@ -1948,7 +1948,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "2022DSC",
+   "display_name": "Python [conda env:2022DSC] *",
    "language": "python",
    "name": "conda-env-2022DSC-py"
   },
@@ -1962,7 +1962,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
