--- a/level_1_challenge/RWL/20220531_all_bboxes_monthly_adjusted_metrics_preprocess_forest_optimize.ipynb
+++ b/level_1_challenge/RWL/20220531_all_bboxes_monthly_adjusted_metrics_preprocess_forest_optimize.ipynb
@@ -3124,9 +3124,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:2022DSC] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-2022DSC-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
