--- a/level_1_challenge/RWL/20220601_challenge_1_all_bboxes_uniform-frog_metrics.ipynb
+++ b/level_1_challenge/RWL/20220601_challenge_1_all_bboxes_uniform-frog_metrics.ipynb
@@ -3584,7 +3584,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -3598,7 +3598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
