--- a/level_1_challenge/RWL/20220610_Random-forest_notebook_for_submission.ipynb
+++ b/level_1_challenge/RWL/20220610_Random-forest_notebook_for_submission.ipynb
@@ -56,7 +56,7 @@
    "source": [
     "# Data input\n",
     "## Frog data (response variable)\n",
-    "We use the functions included in the benchmark file to collect the frog data from the provided training data. We search for frogs in the 5 regions identified in the submission file and an additional 4 region on other parts of Austrailia's coast, identified between the start of 2015 to the present day. This is done by providing `year_range` and `bbox` parameters to the get_frogs function we defined above."
+    "We use the functions included in the benchmark file to collect the frog data from the provided training data. We search for frogs in the 5 evaluation regions and an additional 4 regions on other parts of Australia's coast, limited to frogs observed between the start of 2015 and the present day. We do this by providing `year_range` and `bbox` parameters to the `get_frogs` function defined below."
    ]
   },
   {
@@ -176,7 +176,7 @@
    "metadata": {},
    "source": [
     "## Weather data (predictor variable) \n",
-    "We modified the get_terraclimte function from the benchmark file to group the weather data by month and take the maximum value, minimum value, mean, and standard deviation of each of our chosen measurements. "
+    "We modified the `get_terraclimate` function from the benchmark file to group the weather data by month and take the maximum value, minimum value, mean, and standard deviation of each of our chosen measurements. "
    ]
   },
   {
@@ -259,7 +259,7 @@
    "id": "f1d9adcb-50e4-4cbf-bfed-015b5e3eb042",
    "metadata": {},
    "source": [
-    "We collect the weather data from January 2015 to December 2019, giving us 6 years worth of data for each region. We have selected to use the maximum air temperature, minimum air temperature, precipitation, and soil moisture content as the measurements in our model."
+    "We collect the weather data from January 2015 to December 2019, giving us 5 years worth of data for each region. We have selected to use the maximum air temperature, minimum air temperature, precipitation, and soil moisture content as the measurements in our model."
    ]
   },
   {
@@ -323,7 +323,7 @@
    "metadata": {},
    "source": [
     "## Joining frogs to their climate data\n",
-    "We use the included function to join the frogs to their matching weather data. We iterate the joining over each region to make one large dataset containing frogs and weather from all 9 regions."
+    "We use the included function to join the frogs to their matching weather data. We iterate over the regions and then combine to make one large dataset containing frogs and weather from all 9 regions."
    ]
   },
   {
@@ -685,7 +685,7 @@
    "id": "7ef3c9a3-0d83-4984-91e3-bea3f3fb9065",
    "metadata": {},
    "source": [
-    "We have downsampled our model data to equal number of target and off-target data points, while preserving the isolated instances off-target frogs "
+    "We have downsampled our off-target data points so that our model data contains an equal number of target and off-target data points, while preserving the isolated instances off-target frogs."
    ]
   },
   {
@@ -746,7 +746,7 @@
    "id": "2edd1e22-5081-4c24-aa5a-14ed20f5e2ab",
    "metadata": {},
    "source": [
-    "## Hyper-parameter optimization\n",
+    "## Hyperparameter optimization\n",
     "The built in functions for this task such as GridSearchCV kept crashing on my PC, so I wrote code to break the process into smaller parts and evaluated each individually. "
    ]
   },
@@ -866,7 +866,7 @@
    "id": "3cee4d49-6eea-4641-af02-e3b807a9c187",
    "metadata": {},
    "source": [
-    "Re-evalulate the class_weight options with the refined values of n_estimators and min_sample_split"
+    "Re-evaluate the `class_weight` options with the refined values of `n_estimators` and `min_sample_split`."
    ]
   },
   {
@@ -902,7 +902,7 @@
    "metadata": {},
    "source": [
     "## Model training\n",
-    "Using the hyper-parameters determined from the above process, we train our model with the downsampled data."
+    "Using the hyperparameters determined from the above process, we train our model with the downsampled data."
    ]
   },
   {
@@ -950,8 +950,8 @@
    "metadata": {},
    "source": [
     "# Results on train/test data\n",
-    "## In sample results\n",
-    "Predict the frogs in the training set from the weather in the training set"
+    "## In-sample results\n",
+    "Predict the frogs in the training set from the weather data in the training set."
    ]
   },
   {
@@ -969,8 +969,8 @@
    "id": "e4285c43-fb8b-48be-ba8b-e09ff77db73a",
    "metadata": {},
    "source": [
-    "## Out of sample results\n",
-    "### k-fold cross validation"
+    "## Out-of-sample results\n",
+    "### Stratified k-fold cross validation"
    ]
   },
   {
@@ -1029,8 +1029,8 @@
    "id": "b66b13df-1857-4c7c-8283-5ddcb408d532",
    "metadata": {},
    "source": [
-    "### Submission file dataset\n",
-    "Construct a testing dataset from the 5 regions identified in the submission file with no down sampling"
+    "### Evaluation regions dataset\n",
+    "Construct a testing dataset from the 5 evaluation regions with no down-sampling."
    ]
   },
   {
@@ -1065,7 +1065,7 @@
    "metadata": {},
    "source": [
     "# Accuracy metrics \n",
-    "## In sample results"
+    "## In-sample results"
    ]
   },
   {
@@ -1120,8 +1120,8 @@
    "id": "6302e5a8-dbca-48dc-8447-bf510e113fe4",
    "metadata": {},
    "source": [
-    "## Out of sample accuracy metrics\n",
-    "### k-folds accuracy metrics"
+    "## Out-of-sample accuracy metrics\n",
+    "### Stratified k-folds accuracy metrics"
    ]
   },
   {
@@ -1179,7 +1179,7 @@
    "id": "49b7b65e-86c4-4eed-9291-e9a47dc88903",
    "metadata": {},
    "source": [
-    "### Submission file dataset accuracy metrics"
+    "### Evaluation regions dataset accuracy metrics"
    ]
   },
   {
@@ -1262,9 +1262,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "2022DSC",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-2022DSC-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1276,7 +1276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
