--- a/level_1_challenge/RWL/20220610_Random-forest_notebook_for_submission.ipynb
+++ b/level_1_challenge/RWL/20220610_Random-forest_notebook_for_submission.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Supress Warnings \n",
+    "# Suppress Warnings \n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
@@ -1262,9 +1262,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "2022DSC",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-2022DSC-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1276,7 +1276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
